# clasp

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGES  CMakeLists.txt  LICENSE  README  README.md  configure.bat  configure.sh  sync-prg-opts.sh  temp.txt  todo.txt
.github/workflows/: test.yml
app/: CMakeLists.txt  clasp_app.cpp  clasp_app.h  main.cpp
build_vc/vc10/clasp/: clasp.sln
build_vc/vc10/clasp/app/: app.vcproj  app.vcxproj
build_vc/vc10/clasp/examples/: examples.vcxproj
build_vc/vc10/clasp/lib/: lib.vcxproj
build_vc/vc10/clasp/liblp/: liblp.vcproj  liblp.vcxproj
build_vc/vc10/clasp/libprogram_opts/: libprogram_opts.vcxproj
build_vc/vc10/clasp/test/: test.vcxproj
build_vc/vc12/clasp/: clasp.sln
build_vc/vc12/clasp/app/: app.vcxproj
build_vc/vc12/clasp/examples/: examples.vcproj  examples.vcxproj
build_vc/vc12/clasp/lib/: lib.vcxproj
build_vc/vc12/clasp/test/: test.vcproj  (+1 more)
build_vc/vc9/clasp/: clasp.sln  clasp.vcproj
clasp/: asp_preprocessor.h  cb_enumerator.h  clasp_facade.h  claspfwd.h  clause.h  clingo.h  config.h.in  constraint.h  dependency_graph.h  enumerator.h  heuristics.h  literal.h  logic_program.h  logic_program_types.h  lookahead.h  minimize_constraint.h  model_enumerators.h  parallel_solve.h  parser.h  pod_vector.h  program_builder.h  satelite.h  shared_context.h  solve_algorithms.h  solver.h  solver_strategies.h  solver_types.h  statistics.h  unfounded_check.h  weight_constraint.h
clasp/cli/: clasp_app.h  clasp_cli_configs.inl  clasp_cli_options.inl  clasp_options.h  clasp_output.h
clasp/mt/: mutex.h  parallel_solve.h  thread.h
clasp/util/: atomic.h  hash.h  hash_map.h  indexed_priority_queue.h  left_right_sequence.h  misc_types.h  multi_queue.h  mutex.h  platform.h  pod_vector.h  thread.h  timer.h  type_manip.h
cmake/: FindCppUnit.cmake  clasp-config.cmake
doc/: output.md
doc/api/: clasp  clasp.txt
examples/: CMakeLists.txt  Makefile  example.h  example1.cpp  example2.cpp  example3.cpp  example4.cpp  main.cpp
libclasp/: CMakeLists.txt  Makefile
libclasp/clasp/: asp_preprocessor.h  clasp_facade.h  enumerator.h  heuristics.h  logic_program.h  logic_program_types.h  minimize_constraint.h  program_builder.h  solve_algorithms.h  solver.h  solver_strategies.h  solver_types.h  weight_constraint.h
libclasp/clasp/cli/: clasp_cli_options.inl  clasp_options.h
libclasp/clasp/util/: misc_types.h  platform.h  timer.h
libclasp/doc/api/: clasp  clasp.txt
libclasp/example/: example.h  example1.cpp  example2.cpp  example3.cpp  example4.cpp  main.cpp
libclasp/src/: asp_preprocessor.cpp  cb_enumerator.cpp  clasp_facade.cpp  clasp_options.cpp  clasp_output.cpp  clause.cpp  clingo.cpp  dependency_graph.cpp  enumerator.cpp  heuristics.cpp  logic_program.cpp  logic_program_types.cpp  minimize_constraint.cpp  model_enumerators.cpp  parallel_solve.cpp  parser.cpp  satelite.cpp  shared_context.cpp  solve_algorithms.cpp  solver.cpp  solver_strategies.cpp  timer.cpp  weight_constraint.cpp
libclasp/tests/: Makefile  clause_creator_test.cpp  clause_test.cpp  cli_test.cpp  decision_heuristic_test.cpp  dependency_graph_test.cpp  dlp_builder_test.cpp  enumerator_test.cpp  facade_test.cpp  literal_test.cpp  lpcompare.h  minimize_test.cpp  parser_test.cpp  program_builder_test.cpp  rule_test.cpp  satelite_test.cpp  shared_clause_test.cpp  solver_test.cpp  test.h  test_main.cpp  unfounded_check_test.cpp  weight_constraint_test.cpp
liblp/: CMakeLists.txt  Doxyfile
liblp/potassco/: clingo.h
libpotassco/: .travis.yml  CMakeLists.txt  README.md
libpotassco/app/: CMakeLists.txt  lpconvert.cpp
libpotassco/cmake/: potassco-config.cmake
libpotassco/doc/: Doxyfile  layout.css
libpotassco/potassco/: application.h  aspif.h  aspif_text.h  basic_types.h  clingo.h  convert.h  match_basic_types.h  platform.h  rule_utils.h  smodels.h  string_convert.h  theory_data.h
libpotassco/potassco/program_opts/: errors.h  mapped_value.h  program_options.h  typed_value.h  value.h  value_store.h
libpotassco/potassco/program_opts/detail/: notifier.h  refcountable.h  value_store.h
libpotassco/src/: CMakeLists.txt  application.cpp  aspif.cpp  aspif_text.cpp  clingo.cpp  convert.cpp  match_basic_types.cpp  program_options.cpp  rule_utils.cpp  smodels.cpp  string_convert.cpp  theory_data.cpp  value_store.cpp
libpotassco/tests/: CMakeLists.txt  test_application.cpp  test_aspif.cpp  test_common.h  test_options.cpp  test_smodels.cpp  test_string_convert.cpp  test_text.cpp  test_value.cpp
libprogram_opts/: CMakeLists.txt  Makefile
libprogram_opts/program_opts/: application.h  errors.h  mapped_value.h  program_options.h  string_convert.h  typed_value.h  value.h  value_store.h
libprogram_opts/program_opts/detail/: alarm.h  notifier.h  refcountable.h  value_store.h
libprogram_opts/src/: alarm.cpp  application.cpp  program_options.cpp  string_convert.cpp  value_store.cpp
src/: CMakeLists.txt  asp_preprocessor.cpp  cb_enumerator.cpp  clasp_app.cpp  clasp_facade.cpp  clasp_options.cpp  clasp_output.cpp  clause.cpp  clingo.cpp  constraint.cpp  dependency_graph.cpp  enumerator.cpp  heuristics.cpp  logic_program.cpp  logic_program_types.cpp  lookahead.cpp  minimize_constraint.cpp  model_enumerators.cpp  parallel_solve.cpp  parser.cpp  program_builder.cpp  satelite.cpp  shared_context.cpp  solve_algorithms.cpp  solver.cpp  solver_strategies.cpp  solver_types.cpp  statistics.cpp  timer.cpp  unfounded_check.cpp  weight_constraint.cpp
tests/: CMakeLists.txt  clause_creator_test.cpp  clause_test.cpp  cli_test.cpp  decision_heuristic_test.cpp  dependency_graph_test.cpp  dlp_builder_test.cpp  enumerator_test.cpp  facade_test.cpp  literal_test.cpp  lpcompare.h  minimize_test.cpp  parser_test.cpp  program_builder_test.cpp  rule_test.cpp  satelite_test.cpp  shared_clause_test.cpp  solver_test.cpp  test.h  test_main.cpp  unfounded_check_test.cpp  weight_constraint_test.cpp
tools/: Base.in  BaseRule.in  LibRule.in  ProjRule.in  clasp-option-config-discrete.txt  clasp-option-config.txt  clasp-test.in  clavis-for-clasp-3.1.5.patch  has_std_thread.cpp
(+11 files in other folders)
