enable_testing()
file(GLOB src    *.cpp)
file(GLOB header *.h)
add_executable(test_clasp ${header} ${src})
target_include_directories(test_clasp PRIVATE ${CPPUNIT_INCLUDE_DIRS})
target_link_libraries(test_clasp libclasp ${CPPUNIT_LIBRARIES})
set_target_properties(test_clasp PROPERTIES FOLDER test)
add_test(NAME test_clasp COMMAND test_clasp)
